update login, signup and forgotpassword form

--- a/app/templates/forgotpassword.html
+++ b/app/templates/forgotpassword.html
@@ -44,45 +44,40 @@
                       <div class="col-12">
                         <div class="input-style-1">
                           <label>Email</label>
-                          <input type="email" placeholder="Email" id="email" name="email" value ="" />
+                          <input type="email" placeholder="Email" id="email" name="email" value ="" required />
                           <span id="errorMsg1" style="display: none; color: red;">Vui lòng điền vào Email</span>
                         </div>
                       </div>     
-                       <div class="col-12">
-                        <div class="input-style-1">
-                          <label>New Password</label>
-                          <input type="password" placeholder="New Password" id="new_password" name="new_password"  value =""/>
-                          <span id="errorMsg2" style="display: none; color: red;">Vui lòng điền mật khẩu mới</span>
-                        </div>
-                      </div>                 
-                       <div class="col-12">
-                        <div class="input-style-1">
-                          <label>Confirm Password</label>
-                          <input type="password" placeholder="Confirm Password" id="confirm_password" name="confirm_password"/>
-                          <span id="errorMsg3" style="display: none; color: red;">Vui lòng xác nhận mật khẩu mới</span>
-                        </div>
-                      </div>
       
                      
                       <div class="col-13">        
-                        </div>              
+                        </div>         
                           <script>
+                            var email = document.getElementById("email");
+                            var errorMsg1 = document.getElementById("errorMsg1");
+                            var verify_otp = document.getElementById('verify_otp');
+                            var value_check = verify_otp.value;
+
+                            if(value_check === 'True'){
+                              Swal.fire({
+                                position: 'fixed',
+                                icon: 'success',
+                                title: 'OTP verification successful. You can now log in with your new password',
+                                showConfirmButton: false,
+                                timer: 3000
+                                })
+                              signup_check.value ='False'
+                            }
+
                              window.addEventListener('load', function(event) {  
                               fetch('clear_session')
                               .then(function(response) {
-                                console.log(response);
+                                email.value ="";
                               })
                               .catch(function(error) {
                                 console.log(error);
                               });      
-                              console.log("ok")
                             });        
-                            var email = document.getElementById("email");
-                            var new_password = document.getElementById("new_password");
-                            var confirm_password = document.getElementById("confirm_password");
-                            var errorMsg1 = document.getElementById("errorMsg1");
-                            var errorMsg2 = document.getElementById("errorMsg2");
-                            var errorMsg3 = document.getElementById("errorMsg3");
 
                             email.addEventListener("blur", function() {
                               if (email.value === "") {
@@ -91,22 +86,6 @@
                                 errorMsg1.style.display = "none";
                               }
                             });  
-
-                            new_password.addEventListener("blur", function() {
-                              if (new_password.value === "") {
-                                errorMsg2.style.display = "block";
-                              } else {
-                                errorMsg2.style.display = "none";
-                              }
-                            });  
-
-                            confirm_password.addEventListener("blur", function() {
-                              if (confirm_password.value === "") {
-                                errorMsg3.style.display = "block";
-                              } else {
-                                errorMsg3.style.display = "none";
-                              }
-                            });      
                           </script>
                       </div>
 
