--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -153,7 +153,7 @@
                             mb-30
                           "
                         >
-                          <a href="#" class="hover-underline"
+                          <a href="{{url_for('authen.getForgotPasswordForm')}}" class="hover-underline"
                             >Forgot Password?</a
                           >
                         </div>
