--- a/app/templates/partials/sidebar-nav.html
+++ b/app/templates/partials/sidebar-nav.html
@@ -30,6 +30,7 @@
               </li>
             </ul>
           </li>
+          {% if request.cookies.get('role') == '2' %}
           <span class="divider"><hr /></span>
           <li class="nav-item nav-item-has-children">
             <a
@@ -63,6 +64,7 @@
             </ul>
           </li>
           <span class="divider"><hr /></span>
+          {% endif %}
         </ul>
       </nav>
       <div class="promo-box">
