--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -328,7 +328,24 @@
           </div>
           <!-- End Col -->
         </div>
-        <!-- End Row -->
+         <!-- End Title -->
+         <div class="col-12">
+          <div class="card-style mb-60">
+            <div class="title d-flex flex-wrap justify-content-between">
+              <div class="chart">
+                <div class="left">
+                  <h6 class="text-medium mb-30">Tổng số predict_result gây ra status fail</h6>
+                  <h2> Total: <span id="predict_result_value"></span> Items</h2>
+                </div>
+                <canvas
+                  id="Chart5"
+                  style="width: 100%; height: 600px"
+                ></canvas>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- End Chart -->
         <!-- End Row -->
       </div>
       <!-- end container -->
